@startuml

title __SERVICE's Class Diagram__\n

  namespace  {
    namespace ervice {
      class service.HelloController {
          + Dedlain : Label
          + datee1 : TextField
          + datee2 : TextField
          + fieldData : TextField
          + fieldName : TextField
          + fieldStatus : TextField
          + fieldVid : TextField
          + tbl : TableView
          ~ col0 : TableColumn
          ~ col1 : TableColumn
          ~ col2 : TableColumn
          ~ col3 : TableColumn
          ~ col4 : TableColumn
          ~ connection : Connection
          ~ query : String
          ~ resultSet : ResultSet
          ~ statement : Statement
          - fxlist : ObservableList<StrDB>
          + initialize()
          + onDel()
          + onSef()
          # onSohr()
          # onmain()
          - createtable()
          - updateSorts()
          - updateTable()
      }
    }
  }
  

  namespace  {
    namespace ervice {
      class service.InterDBImpl {
          - conn : Connection
          + InterDBImpl()
          + addStrDB()
          + deleteStrDB()
          + getAllStrDB()
          + getStrDBById()
          + updateStrDB()
      }
    }
  }
  

  service.HelloController .up.|> javafx.fxml.Initializable
  service.HelloController o-- db.InterDB : interDB
  service.HelloController o-- db.StrDB : strDBAdd
  service.InterDBImpl .up.|> db.InterDB


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
